--- a/banktest/base/templates/base/env.html
+++ b/banktest/base/templates/base/env.html
@@ -4,6 +4,7 @@
 
 {% block extra_css %}
     <link href="{% static "base/css/base.css" %}" rel="stylesheet">
+    {{ block.super }}
 {% endblock %}
 
 {% block prebody %}
@@ -19,9 +20,11 @@
     <br/>
     <br/>
     <br/>
+    {{ block.super }}
 {% endblock %}
 
 {% block postbody %}
+    {{ block.super }}
     <footer id="footer">
         <div class="col-sm-12">
                 <img src="{% static "base/img/juanmitaboada.png" %}" height="30px" alt="Juanmi Taboada" title="Juanmi Taboada">
