Controls for users who created another users and they are not superusers

--- a/bankapp/src/app/app.component.html
+++ b/bankapp/src/app/app.component.html
@@ -1,2 +1,8 @@
-<div class='col-md-6'><router-outlet></router-outlet></div>
-<div class='col-md-6'><app-messages></app-messages></div>
+<div class='col-md-6'>
+    <router-outlet></router-outlet>
+    <br/><br/><br/><br/>
+</div>
+<div class='col-md-6'>
+    <app-messages></app-messages>
+    <br/><br/><br/><br/>
+</div>
