--- a/banktest/base/templates/base/env.html
+++ b/banktest/base/templates/base/env.html
@@ -15,11 +15,23 @@
                     <a class="navbar-brand" href="{% url 'home' %}">Banktest</a>
                 </div>
             </div>
+            <div class="collapse navbar-collapse" id="mainmenu">
+                <ul class="nav navbar-nav pull-right">
+                    <li>
+                        <a href="#">
+                            <span class="glyphicon glyphicon-user"></span>
+                            {{user.username}}
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'logout' %}">
+                            <span class="glyphicon glyphicon-off"></span>
+                            Logout
+                        </a>
+                    </li>
+                </ul>
         </nav>
     </header>
-    <br/>
-    <br/>
-    <br/>
     {{ block.super }}
 {% endblock %}
 
